# Vars

./: CMakeLists.txt  README.md
src/Vars/: Caller.cpp  Caller.h  Directory.cpp  Directory.h  Fwd.h  Resource.cpp  Resource.h  Vars.cpp  Vars.h  VarsImpl.cpp  VarsImpl.h
tests/: CMakeLists.txt  tests.cpp
